--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coming-soon",
   "version": "0.1.0",
-  "homepage": "http://chrizzo2.github.io/ComminSoon/",
+  "homepage": "https://chrizzo2.github.io/ComminSoon/",
   "private": true,
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.3.1",
